新增经济系统和比赛管理服务接口，重构相关类以降低耦合